did ManagePartsActivity and SubcategorieAdapter and SettingActivity and converted the row_scrapyard xml into constraint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
         <item>Mechanic</item>
         <item>Scrap-yard Vendor</item>
     </string-array>
+    <string-array name="Lang">
+        <item>English</item>
+        <item>Arabic</item>
+    </string-array>
 
 </resources>
