--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,6 +34,8 @@
     <string name="mechanics">Mechanics</string>
     <string name="diagnostics">Diagnostics</string>
     <string name="profile">Profile</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
         <item>General User</item>
