--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -10,7 +10,7 @@
     <string name="language">اللغة:</string>
     <string name="save">حفظ</string>
     <string name="help_and_support">المساعدة والدعم</string>
-    <string name="already_nhave_an_naccount">مرحبا\n بك</string>
+    <string name="already_nhave_an_naccount">مرحبا\n بك!</string>
     <string name="forgot_password">هل نسيت كلمة المرور؟</string>
     <string name="login">تسجيل الدخول</string>
     <string name="new_user_register_now">مستخدم جديد؟ سجل الآن</string>
@@ -37,12 +37,18 @@
     <string name="profile">الحساب</string>
     <string name="submit">حفظ</string>
     <string name="cancel">إلغاء</string>
-    <string name="searchmechanics">ابحث عن ميكانيكي…</string>
-    <string name="searchparts">ابحث عن قطع…</string>
+    <string name="searchMechanics">ابحث عن ميكانيكي…</string>
+    <string name="searchParts">ابحث عن قطع…</string>
     <string name="search_scrap_yards">ابحث عن ساحة خردة…</string>
     <string name="part_details">تفصيل القطعة</string>
     <string name="filter">فلتر</string>
-    <string name="makeFilter">الماركة:</string>
+    <string name="make">الماركة:</string>
+    <string name="model">طرازها:</string>
+    <string name="year">تاريخ الصنع:</string>
+    <string name="category">فئة القطعة:</string>
+    <string name="subcategory">الفئة الفرعية:</string>
+    <string name="condition">الحالة:</string>
+    <string name="negotiable">قابل للتفاوض</string>
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
         <item>مستخدم عام</item>
