--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">مشروع</string>
+    <string name="app_name">AutoMate</string>
     <string name="login_email_hint">البريد الإلكتروني</string>
     <string name="login_password_hint">كلمة المرور</string>
     <string name="mobile_number_hint">رقم الجوال</string>
