building the part details activity

--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -52,6 +52,7 @@
     <string name="condition">الحالة:</string>
     <string name="negotiable">قابل للتفاوض</string>
     <string name="details">تفاصيل:</string>
+    <string name="scrapyard_name">اسم ساحة الخردة:</string>
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
         <item>مستخدم عام</item>
