--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="condition">Condition:</string>
     <string name="negotiable">Negotiable</string>
     <string name="details">Details:</string>
+    <string name="scrapyard_name">Scrapyard Name:</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
