--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -52,6 +52,8 @@
     <string name="condition">الحالة:</string>
     <string name="negotiable">قابل للتفاوض</string>
     <string name="details">تفاصيل:</string>
+    <string name="from">من</string>
+    <string name="to">الى</string>
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
         <item>مستخدم عام</item>
