--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -55,6 +55,7 @@
     <string name="from">من</string>
     <string name="to">الى</string>
     <string name="scrapyard_name">اسم ساحة الخردة:</string>
+    <string name="clear_all">امسح الكل</string>
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
         <item>مستخدم عام</item>
