--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -55,6 +55,7 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="clear_all">Clear all</string>
+    <string name="nearest_location">Nearest Location</string>
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
         <item>General User</item>
