--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -56,6 +56,7 @@
     <string name="to">To</string>
     <string name="clear_all">Clear all</string>
     <string name="nearest_location">Nearest Location</string>
+    <string name="filtered_by_nearest_location_n">Filtered by Nearest Location\n</string>
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
         <item>General User</item>
