--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,6 +57,7 @@
     <string name="clear_all">Clear all</string>
     <string name="nearest_location">Nearest Location</string>
     <string name="filtered_by_nearest_location_n">Filtered by Nearest Location\n</string>
+    <string name="location_prof_click">View Location</string>
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
         <item>General User</item>
@@ -67,5 +68,6 @@
         <item>English</item>
         <item>Arabic</item>
     </string-array>
+
 
 </resources>
