--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="clear_all">Clear all</string>
     <string name="nearest_location">Nearest Location</string>
     <string name="filtered_by_nearest_location_n">Filtered by Nearest Location\n</string>
+    <string name="location_prof_click">View Location</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
@@ -64,9 +65,11 @@
         <item>Mechanic</item>
         <item>Scrap-yard Vendor</item>
     </string-array>
+
     <string-array name="Lang">
         <item>English</item>
         <item>Arabic</item>
     </string-array>
+
 
 </resources>
