--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -58,6 +58,9 @@
     <string name="clear_all">امسح الكل</string>
     <string name="nearest_location">أقرب موقع</string>
     <string name="filtered_by_nearest_location_n">تمت تصفيته حسب أقرب موقع\n</string>
+    <string name="view_parts">عرض القطع</string>
+    <string name="biography">سيرة شخصية:</string>
+    <string name="rate_me">Rate Me</string>
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
         <item>مستخدم عام</item>
