--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -61,15 +61,116 @@
     <string name="view_parts">عرض القطع</string>
     <string name="biography">سيرة شخصية:</string>
     <string name="rate_me">Rate Me</string>
+
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
         <item>مستخدم عام</item>
         <item>ميكانيكي</item>
         <item>صاحب ساحة خردة</item>
     </string-array>
+
     <string-array name="Lang">
         <item>الإنجليزية</item>
         <item>العربية</item>
+    </string-array>
+
+    <string-array name="categories">
+        <item>المحرك</item>
+        <item>ناقل الحركة ونظام الدفع</item>
+        <item>نظام التعليق والتوجيه</item>
+        <item>نظام الفرامل</item>
+        <item>النظام الكهربائي</item>
+        <item>نظام التبريد</item>
+        <item>نظام العادم (شكمان)</item>
+        <item>نظام الوقود</item>
+        <item>العناصر الداخلية</item>
+        <item>العناصر الخارجية</item>
+    </string-array>
+
+    <string-array name="categories_choices">
+        <item>اختر الفئة</item>
+        <item>المحرك</item>
+        <item>ناقل الحركة ونظام الدفع</item>
+        <item>نظام التعليق والتوجيه</item>
+        <item>نظام الفرامل</item>
+        <item>النظام الكهربائي</item>
+        <item>نظام التبريد</item>
+        <item>نظام العادم (شكمان)</item>
+        <item>نظام الوقود</item>
+        <item>العناصر الداخلية</item>
+        <item>العناصر الخارجية</item>
+    </string-array>
+
+    <string-array name="subcategories_choices">
+        <item>اختر فئة فرعية</item>
+        <item>اختر فئة فرعية;بلوك الأسطوانة;المكابس;عمود المرفق;عمود الكامات;الصمامات;سير التوقيت/سلسلة التوقيت;منظومة السحب;منظومة العادم;حاقنات الوقود;شمعات الإشعال;وحدة التحكم بالمحرك (وحدة التحكم الإلكتروني للمحرك)</item>
+        <item>اختر فئة فرعية;التروس (يدوي أو أوتوماتيكي);القابض (للتروس اليدوية);صندوق التروس;عمود الدفع;التفاضلي;محاور;علبة التحويل (للدفع الرباعي)</item>
+        <item>اختر فئة فرعية;ممتصات الصدمات/الدعامات;نوابض (زنبرك);ذراع التحكم;قضبان التعادل;قضيب المقود;مضخة التوجيه;المفاصل الكروية;البوشات</item>
+        <item>اختر فئة فرعية;فرامل الفرجار;دواسات الفرامل;أقراص الفرامل (اسطوانة الكبح);خطوط الفرامل (مواسير);اسطوانة الفرامل الرئيسية;معزز للفرامل;مجموعة الفرامل اليدوية</item>
+        <item>اختر فئة فرعية;البطارية;المولّد;محرك البدء;نظام الإشعال;كبلات التوصيل;الفيوزات والريلايات;الأضواء (أضواء الأمامية، أضواء الخلفية، إشارات التنبيه);الحساسات (حساسات نظام الفرامل المانعة للانغلاق، حساسات الأكسجين، إلخ)</item>
+        <item>اختر فئة فرعية;المبرّد (رادياتير);مضخة الماء;المحدّد الحراري (ترموستات);مراوح التبريد;الخراطيم;خزان السائل التبريدي</item>
+        <item>اختر فئة فرعية;أنابيب العادم (شكمان);المحول الحفاز;كاتم صوت;منظومة العادم (شكمان)</item>
+        <item>اختر فئة فرعية;خزان الوقود;مضخة الوقود;فلتر الوقود;حاقنات الوقود;جسم الدفع;فلتر الهواء</item>
+        <item>اختر فئة فرعية;المقاعد;لوحة القيادة;عجلة القيادة;مجموعة العدادات;نظام التدفئة والتهوية وتكييف الهواء;نظام الصوت</item>
+        <item>اختر فئة فرعية;ألواح الهيكل;الصدامات;المرايا;الأبواب;النوافذ;نظام مساحات الزجاج وغسيلها</item>
+    </string-array>
+
+    <string-array name="subcategories">
+        <item>بلوك الأسطوانة;المكابس;عمود المرفق;عمود الكامات;الصمامات;سير التوقيت/سلسلة التوقيت;منظومة السحب;منظومة العادم;حاقنات الوقود;شمعات الإشعال;وحدة التحكم بالمحرك (وحدة التحكم الإلكتروني للمحرك)</item>
+        <item>التروس (يدوي أو أوتوماتيكي);القابض (للتروس اليدوية);صندوق التروس;عمود الدفع;التفاضلي;محاور;علبة التحويل (للدفع الرباعي)</item>
+        <item>ممتصات الصدمات/الدعامات;نوابض (زنبرك);ذراع التحكم;قضبان التعادل;قضيب المقود;مضخة التوجيه;المفاصل الكروية;البوشات</item>
+        <item>فرامل الفرجار;دواسات الفرامل;أقراص الفرامل (اسطوانة الكبح);خطوط الفرامل (مواسير);اسطوانة الفرامل الرئيسية;معزز للفرامل;مجموعة الفرامل اليدوية</item>
+        <item>البطارية;المولّد;محرك البدء;نظام الإشعال;كبلات التوصيل;الفيوزات والريلايات;الأضواء (أضواء الأمامية، أضواء الخلفية، إشارات التنبيه);الحساسات (حساسات نظام الفرامل المانعة للانغلاق، حساسات الأكسجين، إلخ)</item>
+        <item>المبرّد (رادياتير);مضخة الماء;المحدّد الحراري (ترموستات);مراوح التبريد;الخراطيم;خزان السائل التبريدي</item>
+        <item>أنابيب العادم (شكمان);المحول الحفاز;كاتم صوت;منظومة العادم (شكمان)</item>
+        <item>خزان الوقود;مضخة الوقود;فلتر الوقود;حاقنات الوقود;جسم الدفع;فلتر الهواء</item>
+        <item>المقاعد;لوحة القيادة;عجلة القيادة;مجموعة العدادات;نظام التدفئة والتهوية وتكييف الهواء;نظام الصوت</item>
+        <item>ألواح الهيكل;الصدامات;المرايا;الأبواب;النوافذ;نظام مساحات الزجاج وغسيلها</item>
+    </string-array>
+
+    <string-array name="condition_choices">
+        <item>اختر الحالة</item>
+        <item>جديد</item>
+        <item>مستعمل</item>
+    </string-array>
+
+    <string-array name="year_choices">
+        <item>اختر سنة</item>
+        <item>١٩٩٠</item>
+        <item>١٩٩١</item>
+        <item>١٩٩٢</item>
+        <item>١٩٩٣</item>
+        <item>١٩٩٤</item>
+        <item>١٩٩٥</item>
+        <item>١٩٩٦</item>
+        <item>١٩٩٧</item>
+        <item>١٩٩٨</item>
+        <item>١٩٩٩</item>
+        <item>٢٠٠٠</item>
+        <item>٢٠٠١</item>
+        <item>٢٠٠٢</item>
+        <item>٢٠٠٣</item>
+        <item>٢٠٠٤</item>
+        <item>٢٠٠٥</item>
+        <item>٢٠٠٦</item>
+        <item>٢٠٠٧</item>
+        <item>٢٠٠٨</item>
+        <item>٢٠٠٩</item>
+        <item>٢٠١٠</item>
+        <item>٢٠١١</item>
+        <item>٢٠١٢</item>
+        <item>٢٠١٣</item>
+        <item>٢٠١٤</item>
+        <item>٢٠١٥</item>
+        <item>٢٠١٦</item>
+        <item>٢٠١٧</item>
+        <item>٢٠١٨</item>
+        <item>٢٠١٩</item>
+        <item>٢٠٢٠</item>
+        <item>٢٠٢١</item>
+        <item>٢٠٢٢</item>
+        <item>٢٠٢٣</item>
+        <item>٢٠٢٤</item>
     </string-array>
 
 
