--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -60,16 +60,116 @@
     <string name="view_parts">View Parts</string>
     <string name="biography">Biography:</string>
     <string name="rate_me">Rate Me</string>
+
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
         <item>General User</item>
         <item>Mechanic</item>
         <item>Scrap-yard Vendor</item>
     </string-array>
+
     <string-array name="Lang">
         <item>English</item>
         <item>Arabic</item>
     </string-array>
 
+    <string-array name="categories">
+        <item>Engine Components</item>
+        <item>Transmission and Drivetrain</item>
+        <item>Suspension and Steering</item>
+        <item>Braking System</item>
+        <item>Electrical System</item>
+        <item>Cooling System</item>
+        <item>Exhaust System</item>
+        <item>Fuel System</item>
+        <item>Interior Components</item>
+        <item>Exterior Components</item>
+    </string-array>
+
+    <string-array name="categories_choices">
+        <item>Select Category</item>
+        <item>Engine Components</item>
+        <item>Transmission and Drivetrain</item>
+        <item>Suspension and Steering</item>
+        <item>Braking System</item>
+        <item>Electrical System</item>
+        <item>Cooling System</item>
+        <item>Exhaust System</item>
+        <item>Fuel System</item>
+        <item>Interior Components</item>
+        <item>Exterior Components</item>
+    </string-array>
+
+    <string-array name="subcategories">
+        <item>Cylinder block;Pistons;Crankshaft;Camshaft;Valves;Timing belt/chain;Intake manifold;Exhaust manifold;Fuel injectors;Spark plugs;Engine control unit (ECU)</item>
+        <item>Transmission (manual or automatic);Clutch (for manual transmission);Gearbox;Drive shafts;Differential;Axles;Transfer case (for 4-wheel drive)</item>
+        <item>Shock absorbers/Struts;Springs;Control arms;Tie rods;Steering rack;Power steering pump;Ball joints;Bushings</item>
+        <item>Brake calipers;Brake pads;Brake rotors;Brake lines;Brake master cylinder;Brake booster;Parking brake assembly</item>
+        <item>Battery;Alternator;Starter motor;Ignition system;Wiring harnesses;Fuses and relays;Lights (headlights, taillights, turn signals);Sensors (ABS sensors, oxygen sensors, etc.)</item>
+        <item>Radiator;Water pump;Thermostat;Cooling fans;Hoses;Coolant reservoir</item>
+        <item>Exhaust pipes;Catalytic converter;Muffler;Exhaust manifold</item>
+        <item>Fuel tank;Fuel pump;Fuel filter;Fuel injectors;Throttle body;Air filter</item>
+        <item>Seats;Dashboard;Steering wheel;Instrument cluster;HVAC system (heating, ventilation, and air conditioning);Audio system</item>
+        <item>Body panels;Bumpers;Mirrors;Doors;Windows;Windshield wipers and washer system</item>
+    </string-array>
+
+    <string-array name="subcategories_choices">
+        <item>Select SubCategory</item>
+        <item>Select SubCategory;Cylinder block;Pistons;Crankshaft;Camshaft;Valves;Timing belt/chain;Intake manifold;Exhaust manifold;Fuel injectors;Spark plugs;Engine control unit (ECU)</item>
+        <item>Select SubCategory;Transmission (manual or automatic);Clutch (for manual transmission);Gearbox;Drive shafts;Differential;Axles;Transfer case (for 4-wheel drive)</item>
+        <item>Select SubCategory;Shock absorbers/Struts;Springs;Control arms;Tie rods;Steering rack;Power steering pump;Ball joints;Bushings</item>
+        <item>Select SubCategory;Brake calipers;Brake pads;Brake rotors;Brake lines;Brake master cylinder;Brake booster;Parking brake assembly</item>
+        <item>Select SubCategory;Battery;Alternator;Starter motor;Ignition system;Wiring harnesses;Fuses and relays;Lights (headlights, taillights, turn signals);Sensors (ABS sensors, oxygen sensors, etc.)</item>
+        <item>Select SubCategory;Radiator;Water pump;Thermostat;Cooling fans;Hoses;Coolant reservoir</item>
+        <item>Select SubCategory;Exhaust pipes;Catalytic converter;Muffler;Exhaust manifold</item>
+        <item>Select SubCategory;Fuel tank;Fuel pump;Fuel filter;Fuel injectors;Throttle body;Air filter</item>
+        <item>Select SubCategory;Seats;Dashboard;Steering wheel;Instrument cluster;HVAC system (heating, ventilation, and air conditioning);Audio system</item>
+        <item>Select SubCategory;Body panels;Bumpers;Mirrors;Doors;Windows;Windshield wipers and washer system</item>
+    </string-array>
+
+    <string-array name="condition_choices">
+        <item>Select Condition</item>
+        <item>New</item>
+        <item>Used</item>
+    </string-array>
+
+    <string-array name="year_choices">
+        <item>Select Year</item>
+        <item>1990</item>
+        <item>1991</item>
+        <item>1992</item>
+        <item>1993</item>
+        <item>1994</item>
+        <item>1995</item>
+        <item>1996</item>
+        <item>1997</item>
+        <item>1998</item>
+        <item>1999</item>
+        <item>2000</item>
+        <item>2001</item>
+        <item>2002</item>
+        <item>2003</item>
+        <item>2004</item>
+        <item>2005</item>
+        <item>2006</item>
+        <item>2007</item>
+        <item>2008</item>
+        <item>2009</item>
+        <item>2010</item>
+        <item>2011</item>
+        <item>2012</item>
+        <item>2013</item>
+        <item>2014</item>
+        <item>2015</item>
+        <item>2016</item>
+        <item>2017</item>
+        <item>2018</item>
+        <item>2019</item>
+        <item>2020</item>
+        <item>2021</item>
+        <item>2022</item>
+        <item>2023</item>
+        <item>2024</item>
+    </string-array>
 
 </resources>
