--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,6 +62,8 @@
     <string name="rate_me">Rate Me</string>
     <string name="add_image">Add Image</string>
     <string name="add_part">Add Part</string>
+    <string name="addPrice">Price (USD)</string>
+    <string name="add">Add</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
