--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -65,6 +65,9 @@
     <string name="add_part">اضافة قطعة</string>
     <string name="addPrice">السعر (بالدولار)</string>
     <string name="add">أضف</string>
+    <string name="enter_old_pass">أدخل كلمة المرور القديمة:</string>
+    <string name="enter_new_pass">أدخل كلمة المرور الجديدة:</string>
+    <string name="enter_confirm_pass">أعد إدخال كلمة\nالمرور الجديدة:</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
