--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,9 @@
     <string name="add_part">Add Part</string>
     <string name="addPrice">Price (USD)</string>
     <string name="add">Add</string>
+    <string name="enter_old_pass">Enter Old Password:</string>
+    <string name="enter_new_pass">Enter New Password:</string>
+    <string name="enter_confirm_pass">re-enter your\nnew password:</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
