--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -64,9 +64,12 @@
     <string name="add_part">Add Part</string>
     <string name="addPrice">Price (USD)</string>
     <string name="add">Add</string>
-    <string name="enter_old_pass">Enter Old Password:</string>
-    <string name="enter_new_pass">Enter New Password:</string>
-    <string name="enter_confirm_pass">re-enter your\nnew password:</string>
+    <string name="enter_old_pass">Old Password:</string>
+    <string name="enter_new_pass">New Password:</string>
+    <string name="enter_confirm_pass">Confirm new\npassword:</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_new_password">Confirm New Password</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
