--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -71,6 +71,8 @@
     <string name="old_password">كلمة المرور القديمة</string>
     <string name="new_password">كلمة المرور الجديدة</string>
     <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
+    <string name="email_administrator_gmail_com">administrator@gmail.com :البريد الإلكتروني</string>
+    <string name="phone_administrator">الهاتف: +96170123456</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
