--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <string name="old_password">Old Password</string>
     <string name="new_password">New Password</string>
     <string name="confirm_new_password">Confirm New Password</string>
+    <string name="email_administrator_gmail_com">Email: administrator@gmail.com</string>
+    <string name="phone_administrator">Phone: +96170123456</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
